<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="400dp"
    tools:context=".fragments.TimerSettingsFragment"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/task_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left|top"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/task_time"
        android:textColor="@color/tomato" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/break_time"
        android:id="@+id/break_time_text"
        android:layout_gravity="left|center_vertical"
        android:layout_below="@+id/task_time_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="113dp"
        android:textColor="@color/tomato"
        android:paddingLeft="10dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/task_time"
        android:gravity="right"
        android:textColor="@color/tomato"
        android:paddingTop="10dp"
        android:layout_alignBottom="@+id/task_time_text"
        android:layout_alignLeft="@+id/exit"
        android:layout_alignStart="@+id/exit" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:id="@+id/break_time"
        android:textColor="@color/tomato"
        android:layout_alignTop="@+id/break_time_text"
        android:layout_alignLeft="@+id/task_time"
        android:layout_alignStart="@+id/task_time" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_gravity="left|bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/exit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/pomodoro_instructions" />

</RelativeLayout>

